@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.959 2008-11-22 04:44:24 castaglia Exp $
+$Id: NEWS,v 1.960 2008-11-22 07:07:46 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -13,6 +13,7 @@ CVS
 --------------------------------
 - Bug 2045 - SQLShowInfo should not be displayed when query returns no data.
 - Bug 2915 - mod_rewrite does not work well for SITE commands.
+- Bug 1636 - GroupRatio does not check user's supplemental group membership.
 
 1.3.2rc3 - Released 20-Nov-2008
 --------------------------------
